--- a/Steck_Aufgabe110.html
+++ b/Steck_Aufgabe110.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe110.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 6. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 6. Grades: 
 
 f<sub>(x)</sub> = ax<sup>6</sup> + bx<sup>5</sup> + cx<sup>4</sup> + dx<sup>3</sup> + ex<sup>2</sup> + fx + g 
 
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 30ax<sup>4</sup> + 20bx<sup>3</sup> + 12cx<sup>2</sup> +
 
 8 Bedingungen : (eine mehr als nötig) 
 
-1. Berührt die x-Achse im Nullpunkt bedeutet zum einen: 
+1. Berührt die x-Achse im Nullpunkt bedeutet zum 
+einen: 
 
 f<sub>(0)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * 0<sup>6</sup> + b * 0<sup>5</sup> + c * 0<sup>4</sup> + d * 0<sup>3</sup> + 
 
 g = 0 
 
-2. Berührt die x-Achse im Nullpunkt bedeutet zum anderen: 
+2. Berührt die x-Achse im Nullpunkt bedeutet zum 
+anderen: 
 
 f’<sub>(0)</sub> = 0 --> 
 
@@ -50,8 +53,9 @@ f’<sub>(0)</sub> = 0 -->
 
 f = 0 
 
-3. Hat in (1|1) einen Wendepunkt mit waagerechter Tangente 
-(Sattelpunkt) bedeutet erstens: (f = 0 und g = 0 eingesetzt) 
+3. Hat in (1|1) einen Wendepunkt mit waagerechter 
+Tangente (Sattelpunkt) bedeutet erstens: 
+(f = 0 und g = 0 eingesetzt) 
 
 f<sub>(1)</sub> = 1 --> 
 
@@ -59,8 +63,8 @@ a * 1<sup>6</sup> + b * 1<sup>5</sup> + c * 1<sup>4</sup> + d * 1<sup>3</sup> + 
 
 a + b + c + d + e = 1       I 
 
-4. Hat in (1|1) einen Wendepunkt mit waagerechter Tangente 
-(Sattelpunkt) bedeutet zweitens: (f = 0) 
+4. Hat in (1|1) einen Wendepunkt mit waagerechter 
+Tangente (Sattelpunkt) bedeutet zweitens: (f = 0) 
 
 f’<sub>(1)</sub> = 0 --> 
 
@@ -68,8 +72,8 @@ f’<sub>(1)</sub> = 0 -->
 
 6a + 5b + 4c + 3d + 2e = 0         II 
 
-5. Hat in (1|1) einen Wendepunkt mit waagerechter Tangente 
-(Sattelpunkt) bedeutet drittens: 
+5. Hat in (1|1) einen Wendepunkt mit waagerechter 
+Tangente (Sattelpunkt) bedeutet drittens: 
 
 f’’<sub>(1)</sub> = 0 --> 
 
@@ -77,8 +81,9 @@ f’’<sub>(1)</sub> = 0 -->
 
 30a + 20b + 12c + 6d + 2e = 0       III 
 
-6. Hat in (-1|1) einen Wendepunkt mit waagerechter Tangente 
-(Sattelpunkt) bedeutet erstens: (f = 0 und g = 0 eingesetzt) 
+6. Hat in (-1|1) einen Wendepunkt mit waagerechter 
+Tangente (Sattelpunkt) bedeutet erstens: 
+(f = 0 und g = 0 eingesetzt) 
  
 f<sub>(-1)</sub> = 1 --> 
 
@@ -86,8 +91,8 @@ a * (-1)<sup>6</sup> + b * (-1)<sup>5</sup> + c * (-1)<sup>4</sup> + d * (-1)<su
 
 a - b + c - d + e = 1        IV 
  
-7. Hat in (-1|1) einen Wendepunkt mit waagerechter Tangente 
-(Sattelpunkt) bedeutet zweitens: (f = 0) 
+7. Hat in (-1|1) einen Wendepunkt mit waagerechter 
+Tangente (Sattelpunkt) bedeutet zweitens: (f = 0) 
   
 f’<sub>(-1)</sub> = 0 -->  
  
@@ -95,8 +100,8 @@ f’<sub>(-1)</sub> = 0 -->
 
  - 6a + 5b - 4c + 3d - 2e = 0             V 
  
-8. Hat in (-1|1) einen Wendepunkt mit waagerechter Tangente 
-(Sattelpunkt) bedeutet drittens: 
+8. Hat in (-1|1) einen Wendepunkt mit waagerechter 
+Tangente (Sattelpunkt) bedeutet drittens: 
  
 f’’<sub>(-1)</sub> = 0 -->  
  
