--- a/Steck_Aufgabe112.html
+++ b/Steck_Aufgabe112.html
@@ -52,8 +52,8 @@ f’<sub>(0)</sub> = 7 -->
 
 e = 7          
  
-3. Hat in (1|0) einen Wendepunkt bedeutet zum einen: 
-(e = 7 eingesetzt) 
+3. Hat in (1|0) einen Wendepunkt bedeutet zum 
+einen: (e = 7 eingesetzt) 
  
 f<sub>(1)</sub> = 0 --> 
 
@@ -61,7 +61,8 @@ a * 1<sup>5</sup> + c * 1<sup>3</sup> + 7 = 0 -->
 
 a + c + 7 = 0         I   
  
-4. Hat in (1|0) einen Wendepunkt bedeutet zum anderen: 
+4. Hat in (1|0) einen Wendepunkt bedeutet zum 
+anderen: 
  
 f’’<sub>(1)</sub> = 0 --> 
 
