--- a/Steck_Aufgabe113.html
+++ b/Steck_Aufgabe113.html
@@ -43,7 +43,8 @@ a * 0<sup>5</sup> + c * 0<sup>3</sup> + e * 0 = 0 -->
 
 0 = 0 liefert kein Ergebnis   
  
-2. Hat in (-1|1) einen Wendepunkt bedeutet zum einen: 
+2. Hat in (-1|1) einen Wendepunkt bedeutet zum 
+einen: 
  
 f<sub>(-1)</sub> = 1 --> 
 
@@ -51,7 +52,8 @@ a * (-1)<sup>5</sup> + c * (-1)<sup>3</sup> + e * (-1) = 1 -->
 
  -a - c - e = 1            I 
  
-3. Hat in (-1|1) einen Wendepunkt bedeutet zum anderen: 
+3. Hat in (-1|1) einen Wendepunkt bedeutet zum 
+anderen: 
  
 f’’<sub>(-1)</sub> = 0 --> 
 
@@ -59,7 +61,8 @@ f’’<sub>(-1)</sub> = 0 -->
 
 -20a - 6c = 0          II  
  
-4. Hat in (-1|1) einen Wendepunkt mit der Steigung 3 bedeutet: 
+4. Hat in (-1|1) einen Wendepunkt mit der 
+Steigung 3 bedeutet: 
  
 f’(-1) = 3 --> 
 
