--- a/Steck_Aufgabe114.html
+++ b/Steck_Aufgabe114.html
@@ -36,7 +36,8 @@ f’’<sub>(x)</sub> = 20ax<sup>3</sup> + 6cx
 
 4 Bedingungen : (eine mehr als nötig) 
  
-1. Hat im Nullpunkt die Steigung 2 bedeutet zum einen: 
+1. Hat im Nullpunkt die Steigung 2 bedeutet zum 
+einen: 
  
 f<sub>(0)</sub> = 0 --> 
 
@@ -44,7 +45,8 @@ a * 0<sup>5</sup> + c * 0<sup>3</sup> + e * 0 = 0 -->
 
 0 = 0 liefert kein Ergebnis   
  
-2. Hat im Nullpunkt die Steigung 2 bedeutet zum anderen: 
+2. Hat im Nullpunkt die Steigung 2 bedeutet zum 
+anderen: 
  
 f’<sub>(0)</sub> = 2 --> 
 
@@ -52,7 +54,8 @@ f’<sub>(0)</sub> = 2 -->
 
 e = 2          
  
-3. Hat in (-1|0) einen Wendepunkt bedeutet zum einen: 
+3. Hat in (-1|0) einen Wendepunkt bedeutet zum 
+einen: 
 (e = 2 eingesetzt) 
  
 f<sub>(-1)</sub> = 0 --> 
@@ -63,7 +66,8 @@ a * (-1)<sup>5</sup> + c * (-1)<sup>3</sup> + 2 * (-1) = 0 -->
 
      -a - c = 2             I 
  
-4. Hat in (-1|0) einen Wendepunkt bedeutet zum anderen: 
+4. Hat in (-1|0) einen Wendepunkt bedeutet zum 
+anderen: 
  
 f’’<sub>(-1)</sub> = 0 --> 
 
