--- a/Steck_Aufgabe115.html
+++ b/Steck_Aufgabe115.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe115.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 5. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 5. Grades: 
 
 f<sub>(x)</sub> = ax<sup>5</sup> + bx<sup>4</sup> + cx<sup>3</sup> + dx<sup>2</sup> + ex + f 
 
@@ -42,7 +43,8 @@ a * 1<sup>5</sup> + b * 1<sup>4</sup> + c * 1<sup>3</sup> + d * 1<sup>2</sup> + 
 
 a + b + c + d + e + f = 0            I 
 
-2. Berührt die x-Achse bei 1 bedeutet zum anderen: 
+2. Berührt die x-Achse bei 1 bedeutet zum 
+anderen: 
 
 f’<sub>(1)</sub> = 0 --> 
 
@@ -58,7 +60,8 @@ a * 2<sup>5</sup> + b * 2<sup>4</sup> + c * 2<sup>3</sup> + d * 2<sup>2</sup> + 
 
 32a + 16b + 8c + 4d + 2e + f = 0       III 
 
-4. Berührt die x-Achse bei 2 bedeutet zum anderen: 
+4. Berührt die x-Achse bei 2 bedeutet zum 
+anderen: 
 
 f’<sub>(2)</sub> = 0 --> 
 
