--- a/Steck_Aufgabe116.html
+++ b/Steck_Aufgabe116.html
@@ -24,7 +24,8 @@ Vorzeichen. Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe116.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 5. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 5. Grades: 
 
 f<sub>(x)</sub> = ax<sup>5</sup> + bx<sup>4</sup> + cx<sup>3</sup> + dx<sup>2</sup> + ex + f 
 
@@ -51,7 +52,8 @@ a * (-5)<sup>5</sup> + b * (-5)<sup>4</sup> + c * (-5)<sup>3</sup> + d * (-5)<su
 
 -3125a + 625b - 125c + 25d - 5e + 1 = 0        I
 
-3. Berührt die x-Achse bei - 5 bedeutet zum anderen: 
+3. Berührt die x-Achse bei - 5 bedeutet zum 
+anderen: 
  
 f’<sub>(-5)</sub> = 0 --> 
 
@@ -75,7 +77,7 @@ f<sub>(-2)</sub> = 0 -->
 
 a * (-2)<sup>5</sup> + b * (-2)<sup>4</sup> + c * (-2)<sup>3</sup> + d * (-2)<sup>2</sup> + e * (-2) + 1 = 0 -->  
 
--32a + 16b - 8c + 4d - 2e + 1 = 0                IV 
+-32a + 16b - 8c + 4d - 2e + 1 = 0              IV 
  
 6. Wechselt bei -3 das Vorzeichen bedeutet: 
 (f = 1 eingesetzt) 
@@ -84,7 +86,7 @@ f<sub>(-3)</sub> = 0 -->
  
 a * (-3)<sup>5</sup> + b * (-3)<sup>4</sup> + c * (-3)<sup>3</sup> + d * (-3)<sup>2</sup> + e * (-3) + 1 = 0 -->  
 
- - 243a + 81b - 27c + 9d - 3e + 1 = 0                V 
+ - 243a + 81b - 27c + 9d - 3e + 1 = 0            V 
  
 II + III * (-1)   
  
@@ -93,7 +95,7 @@ II + III * (-1)
 -------------------------------------               
 3124a - 501b + 74c - 11d     - 1 = 0| +1 
  
-        3124a - 501b + 74c - 11d = 1                   VI 
+        3124a - 501b + 74c - 11d = 1             VI 
  
 III * 2 + IV 
  
@@ -102,7 +104,7 @@ III * 2 + IV
 ----------------------------------
 -30a + 18b - 6c + 6d      + 3 = 0 |-3 
  
-         -30a + 18b - 6c + 6d = -3                   VII 
+         -30a + 18b - 6c + 6d = -3              VII 
  
 III * 3 + V 
  
@@ -111,7 +113,7 @@ III * 3 + V
 ------------------------------------
 -240a + 84b - 24c + 12d     + 4 = 0 |-4 
  
-        -240a + 84b - 24c + 12d = -4                   VIII 
+        -240a + 84b - 24c + 12d = -4            VIII 
  
 III * 5 + I 
  
@@ -120,7 +122,7 @@ III * 5 + I
 ----------------------------------------
 -3120a + 630b - 120c + 30d      + 6 = 0 |-6 
  
-         -3120a + 630b - 120c + 30d = -6              IX 
+         -3120a + 630b - 120c + 30d = -6          IX 
  
  
 VII * (-2) + VIII 
@@ -187,27 +189,28 @@ a = -1/150 und b = -7/75 in X eingesetzt:
  
                     180 - 672 - 1800c = 300 
  
-                         -492 - 1800c = 300 | +492 
+                       -492 - 1800c = 300 | +492 
  
-                               -1800c = 792  |:-1800 
+                            -1800c = 792  |:-1800 
  
-                                            792        11 
-                                    c = - ------- = - ---- 
-                                           1800        25   
+                                   792        11 
+                           c = - ------- = - ---- 
+                                  1800        25   
  
-a = -1/150 und b = -7/75 und c = -11/25 in VII eingesetzt: 
+a = -1/150 und b = -7/75 und c = -11/25 in VII 
+eingesetzt: 
 
 -30 * (- 1/150) + 18 * (-7/75) - 6 * (-11/25) + 6d = -3 |*150 
  
-                             30 - 252 + 396 + 900d = -450 
+                          30 - 252 + 396 + 900d = -450 
  
-                                        174 + 900d = -450 |-174 
+                                     174 + 900d = -450 |-174 
  
-                                              900d = -624 |:900 
+                                           900d = -624 |:900 
  
-                                                         624        52 
-                                                  d = - ------ = - ---- 
-                                                         900        75 
+                                          624        52 
+                                   d = - ------ = - ---- 
+                                          900        75 
  
    
 a = -1/150 und b = -7/75 und c = -11/25 und d = -52/75 
