--- a/Steck_Aufgabe117.html
+++ b/Steck_Aufgabe117.html
@@ -17,14 +17,15 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 117
 
-Der dargestellte Brückenbogen kann durch eine Parabel 
-der Form  f<sub>(x)</sub> = ax<sup>2</sup> beschrieben werden. 
-Wie groß ist a? 
+Der dargestellte Brückenbogen kann durch eine 
+Parabel der Form  f<sub>(x)</sub> = ax<sup>2</sup> beschrieben 
+werden. Wie groß ist a? 
 
 <img src="Aufgabe117.jpg" >
 
-Der Koordinatenursprung liegt im Scheitelpunkt der 
-nach unten geöffneten Parabel --> a muss negativ sein. 
+Der Koordinatenursprung liegt im Scheitelpunkt 
+der nach unten geöffneten Parabel --> 
+a muss negativ sein. 
 
 Der Punkt A hat die Koordinaten (80|-69) 
 
