--- a/Steck_Aufgabe118.html
+++ b/Steck_Aufgabe118.html
@@ -17,25 +17,31 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 118
 
-Rohrbrüche bei Leitungswasser sind über die Hausratversicherung 
-abgesichert. Häufig müssen danach Trockner für nass gewordenes 
-Mauerwerk eingesetzt werden. In einer Tabelle hat der Versicherer 
-übliche Trocknungszeiten für unterschiedliche Mauerdicken 
-aufgezeichnet.  
+Rohrbrüche bei Leitungswasser sind über die 
+Hausratversicherung abgesichert. Häufig 
+müssen danach Trockner für nass gewordenes 
+Mauerwerk eingesetzt werden. In einer Tabelle hat 
+der Versicherer übliche Trocknungszeiten für 
+unterschiedliche Mauerdicken aufgezeichnet.  
 
-Mauerdicke in cm          5     10     15     20     25        
-Trocknungszeit in Tagen  30    120    270    480    750 
+Mauerdicke in cm   5     10     15     20     25        
+Trocknungszeit 
+in Tagen          30    120    270    480    750 
 
-(siehe Skizze). Versicherungsmathematiker haben herausgefunden, 
-dass die Punkte vermutlich auf dem Graphen einer Funktion der 
-Form  f<sub>(x)</sub> = ax<sup>2</sup> liegen.  
+(siehe Skizze). Versicherungsmathematiker haben 
+herausgefunden, dass die Punkte vermutlich auf 
+dem Graphen einer Funktion der Form f<sub>(x)</sub> = ax<sup>2</sup> 
+liegen.  
 a) Wie lautet seine Funktionsgleichung?   
-b) Nach wieviel Tagen ist eine 18 cm dicke Mauer trocken? 
-c) Wie dick ist eine Mauer, wenn sie nach 400 Tagen trocken ist? 
+b) Nach wieviel Tagen ist eine 18 cm dicke Mauer 
+trocken? 
+c) Wie dick ist eine Mauer, wenn sie nach 400 
+Tagen trocken ist? 
 
 <img src="Aufgabe118.jpg" >
 
-a) Die Punktkoordinaten (5/30) in f(x) eingesetzt: 
+a) Die Punktkoordinaten (5/30) in f<sub>(x)</sub> 
+eingesetzt: 
 
 f<sub>(5)</sub> = 30 --> 
 
@@ -47,13 +53,21 @@ a = 1,2
 
 Überprüfung für die anderen Punkte: 
 
-f<sub>(10)</sub> = 120 --> f<sub>(10)</sub> = 1,2 * 10² = 1,2 * 100 = 120  
+f<sub>(10)</sub> = 120 --> 
 
-f<sub>(15)</sub> = 270 --> f<sub>(15)</sub> = 1,2 * 15² = 1,2 * 225 = 270 
+f<sub>(10)</sub> = 1,2 * 10² = 1,2 * 100 = 120  
 
-f<sub>(20)</sub> = 480 --> f<sub>(20)</sub> = 1,2 * 20² = 1,2 * 400 = 480 
+f<sub>(15)</sub> = 270 --> 
 
-f<sub>(25)</sub> = 750 --> f<sub>(25)</sub> = 1,2 * 25² = 1,2 * 625 = 750 
+f<sub>(15)</sub> = 1,2 * 15² = 1,2 * 225 = 270 
+
+f<sub>(20)</sub> = 480 --> 
+
+f<sub>(20)</sub> = 1,2 * 20² = 1,2 * 400 = 480 
+
+f<sub>(25)</sub> = 750 --> 
+
+f<sub>(25)</sub> = 1,2 * 25² = 1,2 * 625 = 750 
 
 Alle Punkte liegen auf dem Graphen. 
 
