--- a/Steck_Aufgabe119.html
+++ b/Steck_Aufgabe119.html
@@ -17,10 +17,11 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 119
 
-Eine Kugel verlässt die Hand eines Kugelstoßers in einer 
-Höhe von 2 m, hat nach 3 m eine Höhe von 4 m und schlägt 
-nach 18 m auf. Die Flugbahn verläuft entlang des Graphen 
-einer Funktion der Form  f<sub>(x)</sub> = ax<sup>2</sup> + bx + c.  
+Eine Kugel verlässt die Hand eines Kugelstoßers 
+in einer Höhe von 2 m, hat nach 3 m eine Höhe 
+von 4 m und schlägt nach 18 m auf. Die Flugbahn 
+verläuft entlang des Graphen einer Funktion der 
+Form  f<sub>(x)</sub> = ax<sup>2</sup> + bx + c.  
 a) Wie lautet die Funktionsgleichung?  
 b) Welche maximale Höhe erreicht die Kugel?  
 c) In welcher Entfernung ist die Kugel 5 m hoch?  
@@ -31,7 +32,8 @@ a)
 
 3 Bedingungen: 
 
-1. Verlässt die Hand in einer Höhe von 2 m bedeutet: 
+1. Verlässt die Hand in einer Höhe von 2 m 
+bedeutet: 
 
 f<sub>(0)</sub> = 2 --> 
 
@@ -39,8 +41,9 @@ a * 0<sup>2</sup> + b * 0 + c = 2 -->
 
 c = 2  
 
-2. Hat nach 3 m eine Höhe von 4 m bedeutet, der Graph 
-geht durch den Punkt (3|4): (c = 2 eingesetzt)
+2. Hat nach 3 m eine Höhe von 4 m bedeutet, der 
+Graph geht durch den Punkt (3|4): 
+(c = 2 eingesetzt)
 
 f<sub>(3)</sub> = 4 --> 
 
@@ -50,8 +53,8 @@ a * 3<sup>2</sup> + b * 3 + 2 = 4 -->
 
 9a + 3b = 2       I 
 
-3. Schlägt nach 18 m auf bedeutet, der Graph geht durch 
-den Punkt (18|0): (c = 2 eingesetzt) 
+3. Schlägt nach 18 m auf bedeutet, der Graph geht 
+durch den Punkt (18|0): (c = 2 eingesetzt) 
 
 f<sub>(18)</sub> = 0 --> 
 
