--- a/Steck_Aufgabe120.html
+++ b/Steck_Aufgabe120.html
@@ -17,36 +17,42 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 120
 
-Ein Brückenbogen über einem Fluss ist parabelförmig 
-und symmetrisch. Sein höchster Punkt liegt 4,05 m 
-über der Wasseroberfläche, und er überspannt 12 m 
-von Ufer zu Ufer. Berechnen Sie die Bogenhöhe, um 
-festzustellen, ob sie für die Durchfahrt eines 
-4,96 m breiten und 2,50 m hohen Schiffes ausreicht. 
+Ein Brückenbogen über einem Fluss ist 
+parabelförmig und symmetrisch. Sein höchster 
+Punkt liegt 4,05 m über der Wasseroberfläche, 
+und er überspannt 12 m von Ufer zu Ufer. 
+Berechnen Sie die Bogenhöhe, um festzustellen, 
+ob sie für die Durchfahrt eines 4,96 m breiten 
+und 2,50 m hohen Schiffes ausreicht. 
 
 <img src="Aufgabe120.jpg" >
 
-Der Koordinatenursprung liegt im Scheitelpunkt der nach 
-unten geöffneten symmetrischen Parabel --> 
-a muss negativ sein. 
+Der Koordinatenursprung liegt im Scheitelpunkt 
+der nach unten geöffneten symmetrischen 
+Parabel --> a muss negativ sein. 
 
 Parabel der Form f<sub>(x)</sub> = ax<sup>2</sup> 
 
 Der Punkt A hat die Koordinaten (-6|-4,05) 
 
-In f<sub>(x)</sub> = ax<sup>2</sup> eingesetzt: - 4,05 = a * (-6)<sup>2</sup> - 4,05 = a * 36 |:36 
+In f<sub>(x)</sub> = ax<sup>2</sup> eingesetzt: 
+
+- 4,05 = a * (-6)<sup>2</sup> - 4,05 = a * 36 |:36 
 
 a = -4,05/36 
 
 f<sub>(x)</sub> = -4,05/36 * x<sup>2</sup> 
 
-Das Schiff ist 4,96 m breit, nach jeder Seite 2,48 m. 
+Das Schiff ist 4,96 m breit, nach jeder Seite 
+2,48 m. 
 
 f<sub>(2,48)</sub> = -4,05 * 2,48<sup>2</sup> 
 
 f<sub>(2,48)</sub> = -0,7 m 
 
-<span style="color:red">Bogenhöhe</span> = 4,05 m - 0,7 m <span style="color:red">= 3,35 m</span> > Schiffshöhe = 2,5 m --> 
+<span style="color:red">Bogenhöhe</span> = 4,05 m - 0,7 m <span style="color:red">= 3,35 m</span> > 
+
+Schiffshöhe = 2,5 m --> 
 
 Schiff kann durchfahren.
 
