--- a/Steck_Aufgabe123.html
+++ b/Steck_Aufgabe123.html
@@ -17,18 +17,19 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 123
 
-Eine Stromleitung hängt zwischen Masten parabelförmig 
-durch, weil sonst die mechanische Spannung in den 
-Leitungen zu groß wird. Wie weit von einem Mast entfernt, 
-kann ein 28 m Hochkran durchfahren, wenn die Masten 200 m 
-voneinander entfernt, 30 m hoch sind und der tiefste Punkt 
+Eine Stromleitung hängt zwischen Masten 
+parabelförmig durch, weil sonst die mechanische 
+Spannung in den Leitungen zu groß wird. Wie weit 
+von einem Mast entfernt, kann ein 28 m Hochkran 
+durchfahren, wenn die Masten 200 m voneinander 
+entfernt, 30 m hoch sind und der tiefste Punkt 
 der Leitung in 22 m Höhe liegt?
 
 <img src="Aufgabe123.jpg" >
 
-So, wie das Koordinatensystem gewählt wurde, hat die 
-zur y-Achse symmetrische Parabel eine Gleichung der 
-Form f<sub>(x)</sub> = ax<sup>2</sup> + c. 
+So, wie das Koordinatensystem gewählt wurde, hat 
+die zur y-Achse symmetrische Parabel eine 
+Gleichung der Form f<sub>(x)</sub> = ax<sup>2</sup> + c. 
 
 2 Bedingungen: 
 
@@ -67,12 +68,13 @@ x<sub>1,2</sub> = ± 86,6 m
 
 x<sub>1</sub> = 86,6 m 
 
-86,6 m  vom Nullpunkt entfernt, entspricht einem Abstand 
-zum Mast von  
+86,6 m  vom Nullpunkt entfernt, entspricht einem 
+Abstand zum Mast von  
 
 100 m - 86,6 m <span style="color:red">= 13,4 m</span>.  
 
-(Wegen Symmetrie gilt das auch für für die negative Seite.)
+(Wegen Symmetrie gilt das auch für für die 
+negative Seite.)
 
 <img src="Aufgabe123_1.jpg" >
 
