--- a/Steck_Aufgabe124.html
+++ b/Steck_Aufgabe124.html
@@ -17,17 +17,18 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 124
 
-Stolleneingänge in Parabelform haben sich für Weinkeller, 
-die in Berghänge eingebaut werden, als Stützkonstruktion 
-bewährt. Wie hoch muss der dargestellte ausgemauerte 
-Eingang sein, damit eine Tür mit den angegebenen Maßen 
+Stolleneingänge in Parabelform haben sich für 
+Weinkeller, die in Berghänge eingebaut werden, 
+als Stützkonstruktion bewährt. Wie hoch muss 
+der dargestellte ausgemauerte Eingang sein, 
+damit eine Tür mit den angegebenen Maßen 
 eingebaut werden kann? 
 
 <img src="Aufgabe124.jpg" >
 
-So, wie das Koordinatensystem gewählt wurde, hat die zur 
-y-Achse symmetrische Parabel eine Gleichung der Form 
-f<sub>(x)</sub> = ax<sup>2</sup> + c. 
+So, wie das Koordinatensystem gewählt wurde, hat 
+die zur y-Achse symmetrische Parabel eine 
+Gleichung der Form f<sub>(x)</sub> = ax<sup>2</sup> + c. 
 
 2 Bedingungen: 
 
