--- a/Steck_Aufgabe125.html
+++ b/Steck_Aufgabe125.html
@@ -17,14 +17,15 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 125
 
-Das Tragseil (rot) einer Seilbahn hängt zwischen den 
-Masten (grün) in Parabelform durch. Es hat im Punkt A 
-die Steigung 0,5. 
+Das Tragseil (rot) einer Seilbahn hängt zwischen 
+den Masten (grün) in Parabelform durch. Es hat im 
+Punkt A die Steigung 0,5. 
 Wie groß ist die maximale Durchhängung d? 
 
-<img src="Aufgabe125.jpg" >
+<img src="Aufgabe125_1.jpg" >
 
-Allgemeine Form einer Funktionsgleichung 2. Grades: 
+Allgemeine Form einer Funktionsgleichung 
+2. Grades: 
 
 f<sub>(x)</sub> = ax<sup>2</sup> + bx + c 
 
@@ -51,7 +52,8 @@ a * 50<sup>2</sup> + b * 50 + 15 = 35 -->
 
 2500a + 50b = 20      I 
 
-3. Hat im Punkt (50|35) die Steigung 0,5 bedeutet: 
+3. Hat im Punkt (50|35) die Steigung 0,5 
+bedeutet: 
 
 f’<sub>(50)</sub> = 0,5 --> 
 
@@ -92,7 +94,9 @@ g<sub>(x)</sub> = 0,4x + 15
  
 Differenzfunktion:  
  
-d<sub>(x)</sub> = g<sub>(x)</sub> - f<sub>(x)</sub> = 0,4x + 15 - (0,002x<sup>2</sup> + 0,3x + 15) 
+d<sub>(x)</sub> = g<sub>(x)</sub> - f<sub>(x)</sub> = 
+
+= 0,4x + 15 - (0,002x<sup>2</sup> + 0,3x + 15) 
  
 d<sub>(x)</sub> = 0,4x + 15 - 0,002x<sup>2</sup> - 0,3x - 15 
  
@@ -106,8 +110,9 @@ d’<sub>(x)</sub> = -0,004x + 0,1 = 0 |-0,1
  
        x = 25 m  
  
-Das heißt, die maximale Durchhängung d tritt genau in der 
-Mitte zwischen den beiden Masten auf und beträgt: 
+Das heißt, die maximale Durchhängung d tritt 
+genau in der Mitte zwischen den beiden Masten auf 
+und beträgt: 
 
 <span style="color:red">d<sub>(25)</sub></span> = -0,002 * 25² + 0,1 * 25 = -1,25 + 2,5 <span style="color:red">= 1,25 m</span>
 
