--- a/Steck_Aufgabe126.html
+++ b/Steck_Aufgabe126.html
@@ -17,17 +17,19 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 126
 
-Mit Parabelflügen kann man Schwerelosigkeit simulieren. 
-Dazu wird ein Flugzeug unter einem Winkel von 45° auf 
-eine Höhe von 9000 m gebracht, dann der Schub so 
-reduziert, dass das Flugzeug erst noch steigt, aber nach 
-5000 m wieder auf 9000 m gesunken ist. Danach erhöht der 
-Pilot den Schub, damit es nicht abstürzt. 
-Auf welche maximale Höhe steigt es unter diesen Bedingungen?  
+Mit Parabelflügen kann man Schwerelosigkeit 
+simulieren. Dazu wird ein Flugzeug unter einem 
+Winkel von 45° auf eine Höhe von 9000 m gebracht, 
+dann der Schub so reduziert, dass das Flugzeug 
+erst noch steigt, aber nach 5000 m wieder auf 
+9000 m gesunken ist. Danach erhöht der Pilot den 
+Schub, damit es nicht abstürzt. Auf welche 
+maximale Höhe steigt es unter diesen Bedingungen?  
 
 <img src="Aufgabe126.jpg" >
 
-Allgemeine Form einer Funktionsgleichung 2. Grades: 
+Allgemeine Form einer Funktionsgleichung 
+2. Grades: 
 
 f<sub>(x)</sub> = ax<sup>2</sup> + bx + c 
 
@@ -81,10 +83,14 @@ f’<sub>(x)</sub> = 2 * -0,0002x + 1 = 0 |-1
  
                x = 2500 m  
     
-Das heißt, die maximale Höhe tritt genau in der Mitte 
-auf und beträgt: 
+Das heißt, die maximale Höhe tritt genau in der 
+Mitte auf und beträgt: 
  
-<span style="color:red">f<sub>(2500)</sub></span> = -0,002 * 2500² + 1 * 2500 + 9000 = -1250 + 2500 + 9000 =  
+<span style="color:red">f<sub>(2500)</sub></span> = 
+
+= -0,002 * 2500² + 1 * 2500 + 9000 = 
+
+= -1250 + 2500 + 9000 =  
  
 <span style="color:red">= 10250 m</span>
 
