--- a/Steck_Aufgabe127.html
+++ b/Steck_Aufgabe127.html
@@ -17,15 +17,17 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 127
 
-Die beiden Straßenstücke sollen so durch eine ganzrationale 
-Funktion miteinander verbunden werden, dass die 
-Verlängerung tangential zur vorgebenen Richtung verläuft 
-und die zweite Ableitung an den Verbindungspunkten gleich 
+Die beiden Straßenstücke sollen so durch eine 
+ganzrationale Funktion miteinander verbunden 
+werden, dass die Verlängerung tangential zur 
+vorgebenen Richtung verläuft und die zweite 
+Ableitung an den Verbindungspunkten gleich 
 groß ist. Wie lautet die Funktionsgleichung?
 
-<img src="Aufgabe127.jpg" >
+<img src="Aufgabe127_1.jpg" >
 
-Allgemeine Form einer Funktionsgleichung 2. Grades: 
+Allgemeine Form einer Funktionsgleichung 
+2. Grades: 
 
 f<sub>(x)</sub> = ax<sup>2</sup> + bx + c 
 
@@ -43,7 +45,8 @@ a * 0<sup>2</sup> + b * 0 + c = 50 -->
 
 c = 50 
 
-2. Hat im Punkt (0|50) die Steigung 1 (tan 45° = 1) bedeutet: 
+2. Hat im Punkt (0|50) die Steigung 1 
+(tan 45° = 1) bedeutet: 
 
 f’<sub>(0)</sub> = 1 --> 
 
