--- a/Steck_Aufgabe128.html
+++ b/Steck_Aufgabe128.html
@@ -17,20 +17,22 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 128
 
-Eine Hauseinfahrt hat zur Straße hin einen Höhenunterschied 
-von 1 m. Sie soll mithilfe einer ganzrationalen Funktion so 
-gestaltet werden, dass sie waagerecht 5 m von der Straße 
-entfernt beginnt und waagerecht in die Straße einmündet. 
-1 m von der Straße entfernt liegt auf Hausebene ein 70 cm 
-hoher Felsbrocken. 
-In welchem Abstamd überstreicht ihn die geplante Einfahrt? 
+Eine Hauseinfahrt hat zur Straße hin einen Höhen-
+unterschied von 1 m. Sie soll mithilfe einer 
+ganzrationalen Funktion so gestaltet werden, dass 
+sie waagerecht 5 m von der Straße entfernt beginnt 
+und waagerecht in die Straße einmündet. 
+1 m von der Straße entfernt liegt auf Hausebene 
+ein 70 cm hoher Felsbrocken. 
+In welchem Abstamd überstreicht ihn die geplante 
+Einfahrt? 
 
-<img src="Aufgabe128.jpg" >
+<img src="Aufgabe128_1.jpg" >
 
-Die gesuchte ganzrationale Funktion muss mindestens 
-3. Grades sein, da sich das Krümmungsverhalten vom 
-Haus aus von einer Links- zu einer Rechtskrümmung 
-(Wendepunkt) verändern muss. 
+Die gesuchte ganzrationale Funktion muss 
+mindestens 3. Grades sein, da sich das Krümmungs-
+verhalten vom Haus aus von einer Links- zu einer 
+Rechtskrümmung (Wendepunkt) verändern muss. 
 
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
