--- a/Steck_Aufgabe129.html
+++ b/Steck_Aufgabe129.html
@@ -17,17 +17,19 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 129
 
-Die Veränderung der Oberflächentemperatur eines Teiches 
-während eines Tages kann nach langjähriger Beobachtung 
-durch eine ganzrationale Funktion 3. Grades beschrieben 
-werden. Messungen ergaben: Um 0.00 Uhr waren es 19°, 
-um 6.00 war sie am niedrigsten mit 17,8° und um 17.00 
-war sie am höchsten. 
-Zu welchem Zeitpunkt ist sie am stärksten gestiegen?
+Die Veränderung der Oberflächentemperatur eines 
+Teiches während eines Tages kann nach langjähriger 
+Beobachtung durch eine ganzrationale Funktion 
+3. Grades beschrieben werden. Messungen ergaben: 
+Um 0.00 Uhr waren es 19°, um 6.00 war sie am 
+niedrigsten mit 17,8° und um 17.00 war sie am 
+höchsten. Zu welchem Zeitpunkt ist sie am 
+stärksten gestiegen?
 
 <img src="Aufgabe129.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades:
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades:
 
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
 
@@ -122,17 +124,17 @@ a = -0,00148 und b = 0,051 in I eingesetzt:
  
 f<sub>(x)</sub> = -0,00148x<sup>3</sup> + 0,051x<sup>2</sup> - 0,453x + 19 
  
-Will man wissen, wann der stärkste Temperaturanstieg ist, 
-braucht man die Tangenstensteigung f’(x) und zwar 
-deren Maximum. 
+Will man wissen, wann der stärkste Temperatur-
+anstieg ist, braucht man die Tangenstensteigung 
+f’(x) und zwar deren Maximum. 
  
 f’<sub>(x)</sub> = -0,00444x<sup>3</sup> + 0,102x - 0,453 
  
-Zur Bestimmung des Extremwertes die erste Ableitung 
-von f’<sub>(x)</sub> (= zweite Ableitung der Ursprungsfunktion) 
-gleich Null setzen --> 
-Der Extremwert dieser ersten Ableitung = Wendepunkt der 
-Ursprungsfunktion. 
+Zur Bestimmung des Extremwertes die erste 
+Ableitung von f’<sub>(x)</sub> (= zweite 
+Ableitung der Ursprungsfunktion) gleich Null 
+setzen --> Der Extremwert dieser ersten Ableitung 
+= Wendepunkt der Ursprungsfunktion. 
  
 f’’<sub>(x)</sub> = -0,00888x + 0,102 |-0,0102 
  
