--- a/Steck_Aufgabe130.html
+++ b/Steck_Aufgabe130.html
@@ -17,13 +17,14 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 130
 
-Eine Bäckerei verpackt Kuchen in Schachteln aus Karton. 
-Die Schachteln stellt der Lieferant auf Wunsch der 
-Bäckerei wie dargestellt her. Wie lang dürfen die 
-ausgeschnittenen Quadrate sein, wenn das Volumen der 
-Schachtel möglichst groß sein soll?
+Eine Bäckerei verpackt Kuchen in Schachteln aus 
+Karton. Die Schachteln stellt der Lieferant auf 
+Wunsch der Bäckerei wie dargestellt her. Wie lang 
+dürfen die ausgeschnittenen Quadrate sein, wenn 
+das Volumen der Schachtel möglichst groß sein 
+soll?
 
-<img src="Aufgabe130.jpg" >
+<img src="Aufgabe130_1.jpg" >
 
 Volumen der Schachtel:
 
@@ -62,8 +63,10 @@ x<sub>1,2</sub> = -----------
             18            
  
       212                   
-x<sub>1</sub> = ------ = 11,78  keine Lösung, denn 2 * 11,78 > 20 
-       18          
+x<sub>1</sub> = ------ = 11,78  
+       18   
+       
+keine Lösung, denn 2 * 11,78 > 20 
        
        68                            
 x<sub>2</sub> = ------ = <span style="color:red">3,77 cm</span>
@@ -71,6 +74,8 @@ x<sub>2</sub> = ------ = <span style="color:red">3,77 cm</span>
  
 V’’<sub>(x)</sub> = 18x - 140 
  
-V’’<sub>(x)</sub> = 18 * 3,77 - 140 = 67,86 - 160 < 0 --> Maximum
+V’’<sub>(x)</sub> = 18 * 3,77 - 140 = 67,86 - 160 < 0 
+
+--> Maximum
 
 </b></p></pre></body></html>
