--- a/Steck_Aufgabe121.html
+++ b/Steck_Aufgabe121.html
@@ -17,17 +17,17 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 121
 
-Der Lastkahn wird mit Kies befüllt. Der Kies verlässt 
-das Förderband am höchsten Punkt des Graphen einer 
-Parabel der Form y = ax<sup>2</sup>. In welcher Entfernung von der 
-Kaimauer trifft der Kies in den Kahn, wenn der 4 m 
-tiefer liegt?  
+Der Lastkahn wird mit Kies befüllt. Der Kies 
+verlässt das Förderband am höchsten Punkt des 
+Graphen einer Parabel der Form y = ax<sup>2</sup>. 
+In welcher Entfernung von der Kaimauer trifft der 
+Kies in den Kahn, wenn der 4 m tiefer liegt?  
 
 <img src="Aufgabe121.jpg" >
 
-Der Koordinatenursprung liegt im Scheitelpunkt der nach 
-unten geöffneten symmetrischen Parabel --> 
-a muss negativ sein. 
+Der Koordinatenursprung liegt im Scheitelpunkt 
+der nach unten geöffneten symmetrischen Parabel 
+--> a muss negativ sein. 
 
 Parabel der Form f<sub>(x)</sub> = ax<sup>2</sup> 
 
@@ -42,7 +42,8 @@ a = -0,44
 
 f<sub>(x)</sub> = -0,44 * x<sup>2</sup>
 
-Liegt der Kahn 4 m tiefer ändert sich -2,75 m in - 6,75 m. 
+Liegt der Kahn 4 m tiefer ändert sich 
+-2,75 m in - 6,75 m. 
 
 -6,75 = - 0,44 * x<sup>2</sup>  :(-0,44) 
 
@@ -50,7 +51,8 @@ Liegt der Kahn 4 m tiefer ändert sich -2,75 m in - 6,75 m.
 
 x<sub>1,2</sub> = ± 3,9 
 
-Nur die positive Richtung kommt für die Lösung in Frage --> 
+Nur die positive Richtung kommt für die 
+Lösung in Frage --> 
 
 <span style="color:red">x = 3,9 m</span>
 
