--- a/Steck_Aufgabe122.html
+++ b/Steck_Aufgabe122.html
@@ -40,13 +40,15 @@ f<sub>(19)</sub> = 0 -->
 
 361a + 19b = -1,5         I
 
-3. Hat an der Stelle x = 19 den Steigungswinkel 30° bedeutet: 
+3. Hat an der Stelle x = 19 den Steigungswinkel 
+30° bedeutet: 
 
 Steigungswinkel 30° entspricht einer Steigung von 
 
 tan (150)° = - 0,577, 
 
-(mathematische Drehrichtung entgegen dem Uhrzeigersinn) 
+(mathematische Drehrichtung entgegen dem 
+Uhrzeigersinn) 
 
 f’<sub>(19)</sub> = -0,577 --> 
 
@@ -85,7 +87,8 @@ f’<sub>(x)</sub> = 0
  
                x = 8,06 m 
  
-Die maximale Höhe ist 8,06 m entfernt und beträgt: 
+Die maximale Höhe ist 8,06 m entfernt und 
+beträgt: 
  
 f<sub>(8,06)</sub> = -0,026 * 8,06<sup>2</sup> + 0,419 * 8,06 + 1,5 = 0   
  
